Working on the logo

--- a/app/src/main/res/layout/landing_activity.xml
+++ b/app/src/main/res/layout/landing_activity.xml
@@ -18,6 +18,23 @@
         android:layout_gravity="center"
         android:elevation="0dp">
 
+        <TextView
+            android:id="@+id/kronikle_LA"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/kano"
+            android:text="@string/app_name_upper"
+            android:textAlignment="center"
+            android:textColor="@color/colorLight"
+            android:textSize="50sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.TabLayout
@@ -30,8 +47,7 @@
         app:tabTextColor="@color/colorDark"
         app:tabSelectedTextColor="@color/colorLight"
         app:background="@color/colorTransparent"
-        app:tabBackground = "@android:color/transparent"
-        ></android.support.design.widget.TabLayout>
+        app:tabBackground="@android:color/transparent" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager_LA"
