--- a/app/src/main/res/layout/landing_activity.xml
+++ b/app/src/main/res/layout/landing_activity.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:fontFamily="@font/hype"
-            android:text="Habit Tracker"
+            android:text="@string/string_6"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="25sp" />
