--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -59,6 +59,7 @@
             android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
 
+
     <Button
         android:id="@+id/button_sign_in_SIF"
         android:layout_width="0dp"
@@ -70,38 +71,46 @@
         android:text="@string/sign_in"
         android:textColor="@color/colorLight"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_forgot_SIF"
+        app:layout_constraintBottom_toTopOf="@+id/button_forgot_password_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password_SIF" />
 
-    <TextView
-        android:id="@+id/text_view_forgot_SIF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/button_forgot_password_SIF"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="20dp"
+        android:background="@color/colorTransparent"
         android:fontFamily="@font/roboto"
         android:text="@string/forgot_password"
+        android:textAllCaps="false"
         android:textColor="@color/colorComplement"
         app:layout_constraintBottom_toTopOf="@+id/text_view_or_SIF"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_offline_SIF"
+        app:layout_constraintEnd_toStartOf="@+id/button_continue_guest_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_sign_in_SIF" />
 
-    <TextView
-        android:id="@+id/text_view_offline_SIF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/button_continue_guest_SIF"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorTransparent"
         android:fontFamily="@font/roboto"
         android:text="@string/guest"
+        android:textAllCaps="false"
         android:textColor="@color/colorComplement"
-        app:layout_constraintBottom_toBottomOf="@+id/text_view_forgot_SIF"
+        app:layout_constraintBottom_toBottomOf="@+id/button_forgot_password_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/text_view_forgot_SIF"
-        app:layout_constraintTop_toTopOf="@+id/text_view_forgot_SIF"
+        app:layout_constraintStart_toEndOf="@+id/button_forgot_password_SIF"
+        app:layout_constraintTop_toTopOf="@+id/button_forgot_password_SIF"
         app:layout_constraintVertical_bias="1.0" />
 
     <View
@@ -111,13 +120,13 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
         android:background="@color/colorBaseLight"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toStartOf="@+id/text_view_or_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF" />
+        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/text_view_or_SIF"
@@ -129,7 +138,7 @@
         app:layout_constraintEnd_toStartOf="@+id/view_2_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/view_1_SIF"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_SIF" />
+        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password_SIF" />
 
     <View
         android:id="@+id/view_2_SIF"
@@ -138,13 +147,13 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
         android:background="@color/colorBaseLight"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/text_view_or_SIF"
-        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF" />
+        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button_facebook_SIF"
@@ -153,8 +162,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="20dp"
         android:background="@color/colorComplement"
+        android:drawablePadding="20dp"
+        android:drawableStart="@drawable/icon_facebook"
         android:fontFamily="@font/roboto"
         android:text="@string/facebook"
+        android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="@color/colorLight"
         android:textSize="16sp"
@@ -172,8 +184,11 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorComplement"
+        android:drawablePadding="20dp"
+        android:drawableStart="@drawable/icon_google"
         android:fontFamily="@font/roboto"
         android:text="@string/google"
+        android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="@color/colorLight"
         android:textSize="16sp"
