--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorTransparent"
@@ -23,8 +24,8 @@
             android:id="@+id/edit_text_email_SIF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/icon_email_selected"
             android:drawablePadding="10dp"
+            android:drawableStart="@drawable/icon_email_selected"
             android:fontFamily="@font/roboto"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
@@ -132,6 +133,7 @@
         android:id="@+id/text_view_or_SIF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
         android:text="@string/or_sign_in_with"
         android:textColor="@color/colorBaseLight"
         app:layout_constraintBottom_toTopOf="@+id/button_facebook_SIF"
