--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -27,7 +27,7 @@
             android:drawableStart="@drawable/icon_name_selected"
             android:fontFamily="@font/roboto"
             android:hint="@string/name"
-            android:inputType="textPersonName"
+            android:inputType="textCapWords"
             android:maxLines="1"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
@@ -53,7 +53,7 @@
             android:drawableStart="@drawable/icon_last_name_selected"
             android:fontFamily="@font/roboto"
             android:hint="@string/last_name"
-            android:inputType="textPersonName"
+            android:inputType="textCapWords"
             android:maxLines="1"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
