--- a/app/src/main/res/drawable/splash_activity_background.xml
+++ b/app/src/main/res/drawable/splash_activity_background.xml
@@ -2,10 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/background_1" />
 
-    <item android:gravity="center">
+    <item
+        android:left="20dp"
+        android:right="20dp">
 
         <bitmap
             android:src="@drawable/k_logo_small"
-            android:gravity="fill_horizontal|fill_vertical" />
+            android:gravity="center" />
     </item>
 </layer-list>
