--- a/app/src/main/res/drawable/icon_name_focused.xml
+++ b/app/src/main/res/drawable/icon_name_focused.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/colorComplement"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M12,11c-2.2,0 -4,-1.8 -4,-4s1.8,-4 4,-4"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/colorComplement"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
