--- a/app/src/main/res/drawable/icon_password_focused.xml
+++ b/app/src/main/res/drawable/icon_password_focused.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/colorComplement"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M7,11V7a5,5 0,0 1,10 0v4"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/colorComplement"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
