--- a/app/src/main/res/layout/landing_activity.xml
+++ b/app/src/main/res/layout/landing_activity.xml
@@ -26,7 +26,6 @@
             android:fontFamily="@font/poppins_bold"
             android:text="@string/app_name_upper"
             android:textAlignment="center"
-            android:textColor="@color/colorLight"
             android:textSize="50sp"
             android:typeface="normal" />
 
@@ -37,7 +36,6 @@
             android:fontFamily="@font/hype"
             android:text="@string/your_personal"
             android:textAlignment="center"
-            android:textColor="@color/colorLight"
             android:textSize="20sp" />
 
         <TextView
@@ -49,7 +47,7 @@
             android:fontFamily="@font/hype"
             android:text="@string/string_1"
             android:textAlignment="center"
-            android:textColor="@color/colorComplement"
+            android:textColor="?attr/colorAccent"
             android:textSize="20sp" />
     </android.support.design.widget.AppBarLayout>
 
@@ -60,8 +58,8 @@
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabIndicatorColor="@color/colorTransparent"
-        app:tabTextColor="@color/colorDark"
-        app:tabSelectedTextColor="@color/colorLight"
+        app:tabTextColor="?attr/colorPrimaryDark"
+        app:tabSelectedTextColor="@color/colorTextLight"
         app:background="@color/colorTransparent"
         app:tabBackground="@android:color/transparent" />
 
@@ -69,7 +67,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorBaseLight" />
+        android:background="?attr/colorPrimaryDark" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager_LA"
