--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -26,11 +26,9 @@
             android:layout_height="wrap_content"
             android:drawablePadding="10dp"
             android:drawableStart="@drawable/icon_email_selected"
-            android:fontFamily="@font/roboto"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:textColor="@android:color/white"
             android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
 
@@ -52,12 +50,11 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/icon_password_selected"
             android:drawablePadding="10dp"
-            android:fontFamily="@font/roboto"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:imeOptions="actionDone"/>
     </android.support.design.widget.TextInputLayout>
 
 
@@ -67,10 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:background="@color/colorComplement"
-        android:fontFamily="@font/roboto"
         android:text="@string/sign_in"
-        android:textColor="@color/colorLight"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button_forgot_password_SIF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,10 +79,9 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="20dp"
         android:background="@color/colorTransparent"
-        android:fontFamily="@font/roboto"
         android:text="@string/forgot_password"
         android:textAllCaps="false"
-        android:textColor="@color/colorComplement"
+        android:textColor="?attr/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toStartOf="@+id/button_continue_guest_SIF"
         app:layout_constraintHorizontal_bias="0.5"
@@ -103,10 +96,9 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorTransparent"
-        android:fontFamily="@font/roboto"
         android:text="@string/guest"
         android:textAllCaps="false"
-        android:textColor="@color/colorComplement"
+        android:textColor="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/button_forgot_password_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -121,7 +113,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="20dp"
-        android:background="@color/colorBaseLight"
+        android:background="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toStartOf="@+id/text_view_or_SIF"
         app:layout_constraintHorizontal_bias="0.5"
@@ -133,9 +125,8 @@
         android:id="@+id/text_view_or_SIF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
         android:text="@string/or_sign_in_with"
-        android:textColor="@color/colorBaseLight"
+        android:textColor="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/button_facebook_SIF"
         app:layout_constraintEnd_toStartOf="@+id/view_2_SIF"
         app:layout_constraintHorizontal_bias="0.5"
@@ -149,7 +140,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
-        android:background="@color/colorBaseLight"
+        android:background="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -163,14 +154,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="20dp"
-        android:background="@color/colorComplement"
         android:drawablePadding="20dp"
         android:drawableStart="@drawable/icon_facebook"
-        android:fontFamily="@font/roboto"
         android:text="@string/facebook"
         android:textAlignment="textStart"
         android:textAllCaps="false"
-        android:textColor="@color/colorLight"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_google_SIF"
@@ -185,14 +173,11 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorComplement"
         android:drawablePadding="20dp"
         android:drawableStart="@drawable/icon_google"
-        android:fontFamily="@font/roboto"
         android:text="@string/google"
         android:textAlignment="textStart"
         android:textAllCaps="false"
-        android:textColor="@color/colorLight"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/button_facebook_SIF"
         app:layout_constraintEnd_toEndOf="parent"
