Small change to buttons in Sign In page

--- a/app/src/main/res/drawable-v23/splash_activity_background.xml
+++ b/app/src/main/res/drawable-v23/splash_activity_background.xml
@@ -8,7 +8,6 @@
         android:gravity="center">
 
         <bitmap
-            android:src="@drawable/k_logo"
-            android:gravity="fill_horizontal|fill_vertical" />
+            android:src="@drawable/k_logo" />
     </item>
 </layer-list>
