--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -80,6 +80,7 @@
         android:layout_marginStart="20dp"
         android:background="@color/colorTransparent"
         android:text="@string/forgot_password"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="?attr/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/text_view_or_SIF"
@@ -97,6 +98,7 @@
         android:layout_marginTop="8dp"
         android:background="@color/colorTransparent"
         android:text="@string/guest"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/button_forgot_password_SIF"
