--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/edit_text_email_SIF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,13 +38,15 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/button_sign_in_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_SIF">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/edit_text_password_SIF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
