--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,27 @@
 <resources>
 
-    <style name="MainTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorBase</item>
-        <item name="colorPrimaryDark">@color/colorBaseLight</item>
-        <item name="colorAccent">@color/colorComplement_1</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-    </style>
-
     <style name="NoActionBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorBase</item>
         <item name="colorPrimaryDark">@color/colorBaseLight</item>
         <item name="colorAccent">@color/colorComplement_1</item>
+        <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textColor">@color/colorTextLight</item>
         <item name="android:editTextColor">@color/colorTextLight</item>
         <item name="android:textColorHint">@color/colorBaseLight</item>
-        <item name="colorButtonNormal">@color/colorComplement_1</item>
         <item name="colorControlNormal">@color/colorBaseLight</item>
+        <item name="colorControlActivated">@color/colorComplement_1</item>
+        <item name="colorControlHighlight">@color/colorComplement_1</item>
+        <item name="colorButtonNormal">@color/colorComplement_1</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+    </style>
+
+    <style name="ActionBarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorBase</item>
+        <item name="colorPrimaryDark">@color/colorBaseLight</item>
+        <item name="colorAccent">@color/colorComplement_1</item>
+        <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
@@ -27,6 +31,5 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
-
 
 </resources>
