New behaviour for EditText in Sign In page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="colorComplement_4">#FEC756</color>
     <color name="colorComplement_5">#EE4C82</color>
     <color name="colorComplement_6">#EF5D86</color>
+    <color name="colorComplement_7">#14C6C4</color>
+    <color name="colorComplement_8">#09D2CC</color>
 
     <color name="colorTextLight">#ffffff</color>
 
