--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,12 @@
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textColor">@color/colorTextLight</item>
+        <item name="textColorError">@color/colorComplement_1</item>
         <item name="android:editTextColor">@color/colorTextLight</item>
         <item name="android:textColorHint">@color/colorBaseLight</item>
         <item name="colorControlNormal">@color/colorBaseLight</item>
         <item name="colorControlActivated">@color/colorComplement_1</item>
+        <item name="android:colorActivatedHighlight">@color/colorComplement_1</item>
         <item name="colorControlHighlight">@color/colorComplement_1</item>
         <item name="colorButtonNormal">@color/colorComplement_1</item>
         <item name="android:windowTranslucentStatus">true</item>
