--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -11,7 +11,7 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout_email_SIF"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="84dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password_SIF"
@@ -35,28 +35,28 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout_password_SIF"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="84dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/button_sign_in_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_SIF">
+        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_SIF"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="?attr/colorPrimaryDark">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/edit_text_password_SIF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/icon_password_selected"
             android:drawablePadding="10dp"
+            android:drawableStart="@drawable/icon_password_selected"
             android:hint="@string/password"
+            android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:textSize="16sp"
-            android:imeOptions="actionDone"/>
+            android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
 
 
